[#48303] Added names and URL links for boards
Signed-off-by: Grzegorz Latosinski <glatosinski@antmicro.com>

--- a/boards/hifive-unleashed/hifive-unleashed.json
+++ b/boards/hifive-unleashed/hifive-unleashed.json
@@ -3,6 +3,10 @@
     "metadata": {"connectionStyle":"curved"},
     "graph": {
         "id": "f786e7b0-64a0-4ab8-89df-fe0c010f07a4",
+        "name": "HiFive Unleashed",
+        "additionalData": {
+            "renodepedia_link": "https://zephyr-dashboard.renode.io/renodepedia/boards/hifive_unleashed"
+        },
         "nodes": [
             {
                 "type": "Freedom U540",
