--- a/components-specification.json
+++ b/components-specification.json
@@ -20786,7 +20786,10 @@
                     "name": "AHB_NO_OPT",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/ahb_lite_bus/rtl/ahb_lite_2to1_mux.sv"
+            }
         },
         {
             "category": "RTL core/ahb_lite_bus",
@@ -21610,7 +21613,10 @@
                     "name": "NUM_RESPONDERS",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/ahb_lite_bus/rtl/ahb_lite_bus.sv"
+            }
         },
         {
             "additionalData": {
@@ -23954,7 +23960,10 @@
                     "name": "CLIENT_ADDR_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/libs/rtl/caliptra_ahb_srom.sv"
+            }
         },
         {
             "additionalData": {
@@ -24149,7 +24158,10 @@
                     ]
                 }
             ],
-            "isCategory": true
+            "isCategory": true,
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/libs/rtl/clk_gate.sv"
+            }
         },
         {
             "category": "RTL core/csrng",
@@ -24350,7 +24362,10 @@
                     "name": "csrng_reg_pkg_NumAlerts",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/csrng/rtl/csrng.sv"
+            }
         },
         {
             "category": "SoC/Intel/cyclonev-hps",
@@ -24896,7 +24911,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/doe/rtl/doe_ctrl.sv"
+            }
         },
         {
             "additionalData": {
@@ -25016,7 +25034,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/datavault/rtl/dv.sv"
+            }
         },
         {
             "category": "SoC/Nordic Semiconductor/dwm1001",
@@ -25297,7 +25318,10 @@
                     "name": "CLIENT_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/ecc/rtl/ecc_top.sv"
+            }
         },
         {
             "category": "SoC/Efinix/efinix_sapphire",
@@ -28506,7 +28530,10 @@
                     "name": "pt",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/riscv_core/veer_el2/rtl/el2_veer_wrapper.sv"
+            }
         },
         {
             "category": "SoC/Intel/elkhart_lake",
@@ -29768,7 +29795,10 @@
                     "name": "entropy_src_reg_pkg_NumAlerts",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/entropy_src/rtl/entropy_src.sv"
+            }
         },
         {
             "additionalData": {
@@ -33552,7 +33582,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/hmac/rtl/hmac_ctrl.sv"
+            }
         },
         {
             "additionalData": {
@@ -35210,7 +35243,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/keyvault/rtl/kv.sv"
+            }
         },
         {
             "category": "SoC/Frontgrade/leon3",
@@ -50699,7 +50735,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/pcrvault/rtl/pv.sv"
+            }
         },
         {
             "category": "SoC/QuickLogic/quicklogic_eos_s3",
@@ -56306,7 +56345,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/sha256/rtl/sha256_ctrl.sv"
+            }
         },
         {
             "category": "RTL core/sha512_ctrl",
@@ -56414,7 +56456,10 @@
                     "name": "AHB_DATA_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/sha512/rtl/sha512_ctrl.sv"
+            }
         },
         {
             "additionalData": {
@@ -57136,7 +57181,10 @@
                     "name": "APB_USER_WIDTH",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/soc_ifc/rtl/soc_ifc_top.sv"
+            }
         },
         {
             "category": "Sensor/ADC/spi-adc",
@@ -57323,7 +57371,10 @@
                     "name": "spi_host_reg_pkg_NumAlerts",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/spi_host/rtl/spi_host.sv"
+            }
         },
         {
             "category": "SoC/STMicroelectronics/c0/stm32c011xx",
@@ -91467,7 +91518,10 @@
                     "name": "uart_reg_pkg_NumAlerts",
                     "type": "text"
                 }
-            ]
+            ],
+            "urls": {
+                "github": "chipsalliance/caliptra-rtl/tree/main/src/uart/rtl/uart.sv"
+            }
         },
         {
             "additionalData": {
