Add coverage data to Caliptra elements

--- a/components-specification.json
+++ b/components-specification.json
@@ -10,6 +10,11 @@
         },
         "twoColumn": true,
         "urls": {
+            "coverage": {
+                "icon": "icons_coverage.svg",
+                "name": "Go to coverage dashboard",
+                "url": ""
+            },
             "datasheet": {
                 "icon": "icons_datasheet.svg",
                 "name": "Datasheet",
@@ -20788,6 +20793,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_ahb_lite_2to1_mux.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/ahb_lite_bus/rtl/ahb_lite_2to1_mux.sv"
             }
         },
@@ -21615,6 +21621,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_ahb_lite_bus.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/ahb_lite_bus/rtl/ahb_lite_bus.sv"
             }
         },
@@ -23962,6 +23969,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_caliptra_ahb_srom.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/libs/rtl/caliptra_ahb_srom.sv"
             }
         },
@@ -24160,6 +24168,7 @@
             ],
             "isCategory": true,
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_clk_gate.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/libs/rtl/clk_gate.sv"
             }
         },
@@ -24364,6 +24373,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_csrng.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/csrng/rtl/csrng.sv"
             }
         },
@@ -25036,6 +25046,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_dv.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/datavault/rtl/dv.sv"
             }
         },
@@ -25320,6 +25331,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_ecc_top.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/ecc/rtl/ecc_top.sv"
             }
         },
@@ -28532,6 +28544,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_el2_veer_wrapper.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/riscv_core/veer_el2/rtl/el2_veer_wrapper.sv"
             }
         },
@@ -29797,6 +29810,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_entropy_src.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/entropy_src/rtl/entropy_src.sv"
             }
         },
@@ -35245,6 +35259,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_kv.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/keyvault/rtl/kv.sv"
             }
         },
@@ -50737,6 +50752,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_pv.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/pcrvault/rtl/pv.sv"
             }
         },
@@ -57183,6 +57199,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_soc_ifc_top.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/soc_ifc/rtl/soc_ifc_top.sv"
             }
         },
@@ -57373,6 +57390,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_spi_host.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/spi_host/rtl/spi_host.sv"
             }
         },
@@ -91520,6 +91538,7 @@
                 }
             ],
             "urls": {
+                "coverage": "https://antmicro.github.io/caliptra-rtl/html/dev/wkuna_62907-page-gen/coverage_dashboard/all/index_uart.sv.html",
                 "github": "chipsalliance/caliptra-rtl/tree/main/src/uart/rtl/uart.sv"
             }
         },
